# eyantra-team-3

./: .gitignore  CMakeLists.txt  README.md  feedback.py  package.xml  setup.py
Task 1/1B/hb_task_1b/: README.md  setup.py
Task 2/hb_task2a/: controller.py  feedback.py  service_node.py  setup.py
Task 2/hb_task2a/hb_task2a/: controller.py  feed2.py  feedback.py
Task 2/hb_task2a/scripts/: controller.py  feedback.py
Task 2/hb_task2b/: setup.py
Task 2/hb_task2b/hb_task2b/: feedback2b.py
Task_2/hb_task2a/hb_task2a/: controller.py
Task_2/hb_task2b/: setup.py
Task_2/hb_task2b/hb_task2b/: bot_controller_1.py  bot_controller_2.py  bot_controller_3.py  feedback2b.py  scarp
Task_2/hb_task2b/launch/: controller.launch.py
Task_3_resources/: camera_test.py  feedback.py  ros2_camera_test.py  temp.py
Task_3_resources/test_esp_servo/: test_esp_servo.ino
controller/scripts/: camera_feedback.py  feedback.py  feedback_30 jan.py  ik_controller.py  subscriber.ino  test.py
hb_task_1b/: controller.py
hb_task_4c/: feedback.py  package.xml  setup.cfg  setup.py
hb_task_4c/src/bot1/: bot_1_5b_controller.py  bot_1_controller.py  circle_publisher.py  square_publisher.py  triangle_publisher.py
hb_task_4c/src/bot2/: bot_2_5b_controller.py  bot_2_controller.py
hb_task_4c/src/bot3/: bot_3_5b_controller.py  bot_3_controller.py  circle_publisher.py  square_publisher.py  triangle_publisher.py
hb_task_4c/src/feedback/: feedback.py
hb_task_4c/src/micro-ros_subscriber_twist/: micro-ros_subscriber_twist.ino
hb_task_4c/src/service/: func.py  service_node.py
launch/: controller.launch.py  feed.launch.py  gazebo.launch.py  hb_task1b.launch.py  micro.launch.py
micro-ros_subscriber_twist/: micro-ros_subscriber_twist.ino
my_robot_interfaces/msg/: Goal.msg
scripts/: bot_1_6a_controller.py  bot_2_6a_controller.py  bot_3_6a_controller.py  bots_reached.py  feedback.py  multithread.py  stop_client.py  stop_service.py  temp.py
src/hb_task_1b/launch/: hb_task1b.launch.py
stop_flag/: CMakeLists.txt  package.xml
urdf/: hb_bot.urdf.xacro
usb_cam/config/: camera_info.yaml  params_1.yaml
(+3 files in other folders)
